    locks witch gcc-4.3.
  * patches/any/cvs-rfc3484.diff: update tests from CVS.  Closes: #474226.
  * patches/localedata/locale-shs_CA.diff: add Secwepemctsín from CVS.
  * debhelper.in/libc-prof.README.Debian: new file to explain how to use
    libc-prof.  Closes: #442858.
  * patches/any/cvs-ethertype.diff: new patch to add new ETHERTYPE_*
    definitions.  Closes: #474171.

  [ Pierre Habouzit ]
  * Add any/cvs-strerror_r.diff to make strerror_r actually thread safe.
    Closes: #456531.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Apr 2008 18:28:10 +0200

glibc (2.7-10) unstable; urgency=low

  * Update Chinese debconf translation, by LI Daobing.
  * Update Dutch debconf translation, by Bart Cornelis.  Closes: #468300.
  * Update Polish debconf translation, by Emilian Nowak.
  * Update Vietnamese debconf translation, by Clytie Siddall.  Closes: #468453.
  * Update Basque debconf translation, by Piarres Beobide.  Closes: #468463.
  * Update Romanian debconf translation, by Stan Ioan-Eugen.  Closes: #468671.
  * Update Czech debconf translation, by Miroslav Kure.  Closes: #468910.
  * Update Russian debconf translation, by Sergey Alyoshin.  Closes: #469037.
  * Update Korean debconf translation, by Sunjae Park.  Closes: #469097.
  * Update French debconf translation, by Christian Perrier.  Closes: #469249.
  * patches/localedata/locale-es_CR.diff: chane AM/PM format to "a.m./p.m." 
    from "A.M/P.M.".
  * Remove uk_UA from patches/localedata/first_weekday.diff: merged upstream
    in a different way.  Closes: bug#469439.
  * patches/any/cvs-rfc3484.diff: update from CVS to allow the definition of
    IPv4 scopes in /etc/gai.conf.    
  * patches/all/cvs-gai_conf.diff: update gai.conf from CVS to also mention
    Teredo tunnels and scopev4 defaults.
  * sysdeps/mips.mk, sysdeps/mipsel.mk: define TIMEOUTFACTOR.
  * patches/any/cvs-strtod.diff: new patch from CVS to fix strtod().  Closes:
    #465769.