@@ -1,8 +1,3 @@
-ifeq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
-CC     = gcc-4.2
-CXX    = g++-4.2
-endif
-
 libc_add-ons = ports nptl $(add-ons)
 
 # We need __ARM_NR_set_tls syscall
